Lots of little fixes for Dark Mode (Experimental)
Summary: Cleans up a bunch of Differential odd/special colors. Adds some basic "highlight" colors instead of pure yellow.

Test Plan: Test each color change in normal and dark modes.

Reviewers: epriestley

Reviewed By: epriestley

Subscribers: Korvin

Differential Revision: https://secure.phabricator.com/D18239

--- a/webroot/rsrc/css/application/config/config-options.css
+++ b/webroot/rsrc/css/application/config/config-options.css
@@ -52,5 +52,5 @@
 
 .config-options-effective-value,
 .config-option-table .config-options-effective-value th {
-  background: {$lightyellow};
+  background: {$gentle.highlight};
 }
