--- a/webroot/rsrc/css/core/remarkup.css
+++ b/webroot/rsrc/css/core/remarkup.css
@@ -3,7 +3,7 @@
  */
 
 .phabricator-remarkup {
-  line-height: 1.51em;
+  line-height: 1.61em;
   word-break: break-word;
   color: {$darkbluetext};
 }
